fixes #934 alignment of next link

--- a/Dnn.CommunityForums/themes/community-default/_src/less/_utilities.less
+++ b/Dnn.CommunityForums/themes/community-default/_src/less/_utilities.less
@@ -25,3 +25,7 @@
             display: initial;
         }
     }
+
+    .dcf-text-end{
+        text-align: end;
+    }
